--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -1,3 +1,11 @@
-.nav{
-    font-size: 50%;
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
+
+body{
+    font-family: montserrat;
+}r
