--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -6,3 +6,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+nav{
+    background
+}
