--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -11,5 +11,14 @@ body{
 }
 
 nav{
-    background: 122432;
+    background: #122432;
+    height: 80px;
+    width: 100%;
+}
+label.logo{
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
