Thu, Apr 13, 2023, 4:46 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -11,7 +11,7 @@ body{
 }
 
 nav{
-    background: #122432;
+    background: #699FC9;
     height: 80px;
     width: 100%;
 }
@@ -38,4 +38,7 @@ nav ul li a{
     color: white;
     font-size: 17px;
     text-transform: uppercase;
+}
+a.active,a:hover{
+    background:
 }
