Thu, Apr 13, 2023, 4:49 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -35,7 +35,9 @@ nav ul li{
 }
 
 nav ul li a{
-    color: white;
+    background-color: transparent;
+    color: inherit;
+    text-decoration: inherit;
     font-size: 17px;
     text-transform: uppercase;
 }
