--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -7,7 +7,9 @@
 }
 
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: mundial, sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 nav{
