Thu, Apr 13, 2023, 4:59 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -13,7 +13,7 @@ body{
 }
 
 nav{
-    background: #5BAAE6;
+    background: #D7D9DC;
     height: 80px;
     width: 100%;
 }
@@ -46,5 +46,5 @@ nav ul li a{
     text-transform: uppercase;
 }
 a.active,a:hover{
-    background: #2585CE
+    background: #9EC3FF
 }
