--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -7,19 +7,19 @@
 }
 
 body{
-    font-family: mundial, sans-serif;
-    font-weight: 300;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 10;
     font-style: normal;
 }
 
 nav{
     background: #D7D9DC;
-    height: 80px;
+    height: 50px;
     width: 100%;
 }
 label.logo{
-    color: white;
-    font-size: 35px;
+    color: black;
+    font-size: 22px;
     line-height: 80px;
     padding: 0 100px;
     font-weight: bold;
@@ -46,5 +46,5 @@ nav ul li a{
     text-transform: uppercase;
 }
 a.active,a:hover{
-    background: #9EC3FF
+    background: #CCE0FF
 }
