Thu, Apr 13, 2023, 5:23 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -48,3 +48,11 @@ nav ul li a{
 a.active,a:hover{
     background: #CCE0FF
 }
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 65px;
+    margin-right: 40px;
+    
+}
