--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -13,15 +13,15 @@ body{
 }
 
 nav{
-    background: #D7D9DC;
+    background: #e2e8f0;
     height: 65px;
     width: 100%;
 }
 label.logo{
     color: black;
-    font-size: 20px;
+    font-size: 17px;
     line-height: 65px;
-    padding: 0 0px;
+    padding: 0 20px;
     font-weight: bold;
 }
 
