Thu, Apr 13, 2023, 5:32 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -54,5 +54,9 @@ a.active,a:hover{
     float: right;
     line-height: 65px;
     margin-right: 40px;
+    cursor: pointer;
+}
 
+#check{
+    display: none;
 }
