Thu, Apr 13, 2023, 5:35 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -60,3 +60,13 @@ a.active,a:hover{
 #check{
     display: none;
 }
+@media (max-width: 952px){
+    label.logo{
+        font-size: 25px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+        font-size: 16px;
+
+    }
+}
