--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -18,8 +18,8 @@ nav{
     width: 100%;
 }
 label.logo{
-    color: #253C5F;
-    font-size: 17px;
+    color: #122A4F;
+    font-size: 20px;
     line-height: 65px;
     padding: 0 50px;
     font-weight: bold;
@@ -38,7 +38,7 @@ nav ul li{
 
 nav ul li a{
     background-color: transparent;
-    color: #253C5F;
+    color: #122A4F;
     text-decoration: inherit;
     font-size: 15px;
     padding: 7px 13px;
@@ -50,7 +50,7 @@ a.active,a:hover{
 }
 .checkbtn{
     font-size: 30px;
-    color: #253C5F;
+    color: #122A4F;
     float: right;
     line-height: 65px;
     margin-right: 40px;
@@ -68,5 +68,19 @@ a.active,a:hover{
     nav ul li a{
         font-size: 16px;
 
+    }
+}
+@media (max-width: 900px){
+    .checkbtn{
+        display:block
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background:
+        top: 80px;
+        left: 0;
+        text-align: center;
     }
 }
