Thu, Apr 13, 2023, 5:47 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -86,4 +86,10 @@ a.active,a:hover{
     nav ul li{
         display: block;
     }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a.hover,a.active{
+        background: none
+    }
 }
