Thu, Apr 13, 2023, 6:07 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -93,7 +93,7 @@ a.active,a:hover{
     }
     a:hover,a.active{
         background: none;
-        color: #122A4F;
+        color: white;
     }
     #check:checked ~ ul{
         left: 0;
