Thu, Apr 13, 2023, 6:09 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -93,7 +93,8 @@ a.active,a:hover{
     }
     a:hover,a.active{
         background: none;
-        color: white;
+        color: #FFEE6E;
+        border-color: black;
     }
     #check:checked ~ ul{
         left: 0;
