--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -93,7 +93,7 @@ a.active,a:hover{
     }
     a:hover,a.active{
         background: none;
-        color: #FFEE6E;
+        color: #28579D;
         border: 1px solid black;
         outline-style: solid;
         outline-color: red;
