Thu, Apr 13, 2023, 6:21 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -70,6 +70,9 @@ a.active,a:hover{
     nav ul li a{
         font-size: 16px;
     }
+    .checkbtn{
+        display: none;
+    }
 }
 
 @media (max-width: 858px){
