Thu, Apr 13, 2023, 6:39 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -72,6 +72,12 @@ a.active,a:hover{
     }
 }
 
+@media (min-width: 350px) {
+    .checkbtn {
+      display: block;
+    }
+  }
+
 @media (max-width: 858px){
     .checkbtn{
         display: block;
