Thu, Apr 13, 2023, 6:40 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -72,7 +72,7 @@ a.active,a:hover{
     }
 }
 
-@media (min-width: 350px) {
+@media (max-width: 858px) {
     .checkbtn {
       display: block;
     }
