--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -66,6 +66,7 @@ a.active,a:hover{
     .primary-navigation{
         position:fixed;
         inset: 0 0 0 30%;
+        flex-direction: column;
         background: steelblue;
     }
     nav ul li a{
@@ -78,34 +79,3 @@ a.active,a:hover{
 
 
 
-@media (max-width: 858px){
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    label.logo{
-        font-size: 25px;
-        padding-left: 50px;
-    }
-    nav ul li{
-        display: block;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    a:hover,a.active{
-        background: none;
-        color: #28579D;
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
-}
