--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -67,6 +67,7 @@ a.active,a:hover{
         position:fixed;
         inset: 0 0 0 30%;
         flex-direction: column;
+        padding: min(30vh, 10rem) 2em;
         background: steelblue;
     }
     nav ul li a{
