--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -58,30 +58,46 @@ a.active,a:hover{
     cursor: pointer;
 }
 
-.flex{
-    display: flex;
-    gap: var(--gap,2rem);
-}
 
 #check{
     display: none;
 }
 
-@media (max-width: 35em){
-    .primary-navigation{
-        position:fixed;
-        inset: 0 0 0 30%;
-        flex-direction: column;
-        padding: min(30vh, 10rem) 2em;
-        background: hsl(0 0% 100%);
-    }
-    nav ul li a{
-        font-size: 16px;
-    }
+@media (min-width: 858px){
     .checkbtn{
-        display: none;
+        display:none;
     }
 }
 
-
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    label.logo{
+        font-size: 25px;
+        padding-left: 50px;
+    }
+    nav ul li{
+        display: block;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover,a.active{
+        background: none;
+        color: #28579D;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
 
