--- a/cs50/homepage/text.css
+++ b/cs50/homepage/text.css
@@ -1,31 +1,22 @@
-@media (max-width: 858px){
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    label.logo{
-        font-size: 25px;
-        padding-left: 50px;
-    }
-    nav ul li{
-        display: block;
+
+
+@media (max-width: 35em){
+    .primary-navigation{
+        position:fixed;
+        inset: 0 0 0 30%;
+        flex-direction: column;
+        padding: min(30vh, 10rem) 2em;
+        background: hsl(0 0% 100%);
     }
     nav ul li a{
-        font-size: 20px;
+        font-size: 16px;
     }
-    a:hover,a.active{
-        background: none;
-        color: #28579D;
+    .checkbtn{
+        display: none;
     }
-    #check:checked ~ ul{
-        left: 0;
-    }
+}
+
+.flex{
+    display: flex;
+    gap: var(--gap,2rem);
 }
