--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -11,12 +11,13 @@ body{
     font-weight: 10;
     font-style: normal;
 }
-
+/* nav bar*/
 nav{
     background: #e2e8f0;
     height: 65px;
     width: 100%;
 }
+
 label.logo{
     color: #122A4F;
     font-size: 20px;
@@ -99,5 +100,10 @@ a.active,a:hover{
     #check:checked ~ ul{
         left: 0;
     }
+}
+/* #endregion */
+
+main{
+    text-align: center;
 }
 
