--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -17,6 +17,7 @@ nav{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 10;
     font-style: normal;
+    font-size: 20px;
 }
 
 label.logo{
