Fri, Apr 14, 2023, 9:45 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -6,9 +6,14 @@
     box-sizing: border-box;
 }
 
-body{
-    font-size: 1px;
+main{
+    font-size: 0px;
 }
+
+:root {
+    --bs-body-font-size: 16px; /* set the font size to 16 pixels */
+  }
+
 /* nav bar*/
 nav{
     background: #e2e8f0;
