Fri, Apr 14, 2023, 10:12 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -6,13 +6,12 @@
     box-sizing: border-box;
 }
 
-main{
-    font-size: 5px;
+
+h1 {
+    font-size: 10px;
+    text-align: center;
 }
 
-body{
-    font-size: 5px;
-}
 
 /* nav bar*/
 nav{
