Fri, Apr 14, 2023, 10:16 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -12,6 +12,13 @@ h1 {
     text-align: center;
 }
 
+main{
+    font-size: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
 
 /* nav bar*/
 nav{
