--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -7,8 +7,12 @@
 }
 
 
+body{
+    font-size: 16px; /* Set the desired font size for the body text */
+}
+
 h1 {
-    font-size: 10px;
+    font-size: 24px; /* Set the desired font size for the h1 element */
     text-align: center;
 }
 
