--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -14,6 +14,7 @@ body{
 h1 {
     font-size: 24px; /* Set the desired font size for the h1 element */
     text-align: center;
+    display: inline-bloc
 }
 
 main{
