Fri, Apr 14, 2023, 10:25 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -14,7 +14,8 @@ body{
 h1 {
     font-size: 24px; /* Set the desired font size for the h1 element */
     text-align: center;
-    display: inline-bloc
+    display: inline-block;
+    transition
 }
 
 main{
