Fri, Apr 14, 2023, 10:28 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -17,6 +17,9 @@ h1 {
     display: inline-block;
     transition
 }
+span{
+    transition: opacity: 0.5s ease 0s; opacity: 0;
+}
 
 main{
     font-size: 5px;
