--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -8,17 +8,30 @@
 
 
 body{
-    font-size: 16px; /* Set the desired font size for the body text */
+    font-size: 16px;
 }
 
 h1 {
-    font-size: 24px; /* Set the desired font size for the h1 element */
+    font-size: 24px;
     text-align: center;
     display: inline-block;
-    transition
 }
 span{
-    transition: opacity: 0.5s ease 0s; opacity: 0;
+    span{
+        display: inline-block;
+        background-color: #000;
+        width: 2px;
+        height: 1em;
+        margin-left: 2px;
+        opacity: 1;
+        animation: blink 1s steps(2, start) infinite;
+    }
+
+    @keyframes blink {
+        50% {
+            opacity: 0;
+        }
+    }
 }
 
 main{
