--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -20,9 +20,9 @@ h1 {
 span{
     display: inline-block;
     background-color: #000;
-    width: 2px;
-    height: 1em;
-    margin-left: 2px;
+    width: 1em;
+    height: 2px;
+    margin-top: -5em;
     opacity: 1;
     animation: blink 2s linear infinite;
 }
