--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -20,9 +20,9 @@ h1 {
 span{
     display: inline-block;
     background-color: #000;
-    width: 1em;
+    width: .8em;
     height: 2px;
-    margin-top: -5em;
+    margin-top: 0em;
     opacity: 1;
     animation: blink 2s linear infinite;
 }
