--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -22,7 +22,8 @@ span{
     background-color: #000;
     width: .8em;
     height: 2px;
-    margin-top: 10em;
+    position: relative;
+    margin-top: 3em;
     opacity: 1;
     animation: blink 2s linear infinite;
 }
