Fri, Apr 14, 2023, 10:46 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -13,7 +13,7 @@ body{
 
 h1 {
     font-size: 24px;
-    text-align: center;
+    text-align: top;
 }
 .text {
     vertical-align: top;
@@ -56,6 +56,9 @@ nav{
     font-weight: 10;
     font-style: normal;
     font-size: 20px;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
 }
 
 label.logo{
