--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -13,7 +13,10 @@ body{
 
 h1 {
     font-size: 24px;
-    text-align: top;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin-top: 0%;
 }
 .text {
     vertical-align: top;
