--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -47,7 +47,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: calc(100vh - 65px);
 }
 
 /* nav bar*/
