--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -73,26 +73,34 @@ label.logo{
     font-weight: bold;
 }
 
-nav ul{
-    float: right;
-    margin-right: 20px;
-}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-nav ul li{
-    display: inline-block;
-    line-height: 65px;
-    margin: 0 5px;
-}
+  nav div {
+    margin-right: 10px;
+  }
 
-nav ul li a{
-    background-color: transparent;
-    color: #122A4F;
-    text-decoration: inherit;
-    font-size: 15px;
-    padding: 7px 13px;
-    border-radius: 15px;
-    text-transform: uppercase;
-}
+  nav div a {
+    text-decoration: none;
+    color: #000;
+  }
+
+  /* Button styles */
+  button {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px 15px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+
+  button svg {
+    height: 1em;
+    width: 1em;
+  }
 a.active,a:hover{
     background: #122A4F;
     color: white;
