--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -13,7 +13,7 @@ body{
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 5em;
     text-align: center;
     font-weight: bold;
     letter-spacing: 1px;
