Fri, Apr 14, 2023, 1:18 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -49,8 +49,13 @@ main{
     justify-content: center;
     align-items: center;
     min-height: calc(100vh - 65px);
+    padding: 1rem;
+    box-sizing: border-box;
+    margin-top: 65px;
 }
-
+section {
+    margin-bottom: 2rem;
+}
 /* nav bar*/
 nav{
     background: #e2e8f0;
