--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -17,7 +17,7 @@ h1 {
     text-align: center;
     font-weight: bold;
     letter-spacing: 1px;
-    margin-top: -100%;
+    margin-top: 1rem;
 }
 
 .text {
@@ -49,9 +49,11 @@ main{
     padding: 1rem;
     box-sizing: border-box;
     margin-top: 65px;
+    position: relative;
 }
 section {
     margin-bottom: 2rem;
+    text-align: center;
 }
 /* nav bar*/
 nav{
