--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -62,6 +62,14 @@ img{
     border-radius: 50%;
     border: 5px solid black;
 }
+.profile-image-container {
+    width: 33.33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /* nav bar*/
 nav{
