--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -59,6 +59,7 @@ img{
     width: 150px;
     height: 150px;
     object-fit: cover;
+    object-position: center top;
     border-radius: 50%;
     border: 5px solid black;
 }
