Fri, Apr 14, 2023, 1:41 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -52,24 +52,26 @@ main{
     position: relative;
 }
 section {
-    margin-bottom: 2rem;
+    margin-bottom: 10rem;
     text-align: center;
 }
 img{
     width: 150px;
     height: 150px;
     object-fit: cover;
-    object-position: center top;
+    object-position: 10000% 20%;
     border-radius: 50%;
     border: 5px solid black;
 }
 .profile-image-container {
     width: 33.33%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-200%);
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 /* nav bar*/
