Fri, Apr 14, 2023, 1:46 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -156,7 +156,7 @@ a.active,a:hover{
     }
     label.logo{
         font-size: 25px;
-        padding-left: 50px;
+        text-align: center;
     }
     nav ul li{
         display: block;
