Fri, Apr 14, 2023, 1:48 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -154,9 +154,12 @@ a.active,a:hover{
         text-align: center;
         transition: all .5s;
     }
+    nav{
+        text-align:center
+    }
     label.logo{
         font-size: 25px;
-        text-align: center;
+        width: 100%
     }
     nav ul li{
         display: block;
