Fri, Apr 14, 2023, 1:50 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -159,7 +159,10 @@ a.active,a:hover{
     }
     label.logo{
         font-size: 25px;
-        width: 100%
+        display: block;
+        margin: 0 auto;
+        line-height: 65px;
+
     }
     nav ul li{
         display: block;
