Fri, Apr 14, 2023, 6:01 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -63,6 +63,12 @@ img{
     object-position: 10000% 20%;
     border-radius: 50%;
     border: 5px solid black;
+    float: left;
+    margin-right: 1rem;
+}
+
+#about-me p {
+    margin-left: 150px;
 }
 .profile-image-container {
     width: 33.33%;
