Fri, Apr 14, 2023, 6:04 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -79,7 +79,9 @@ img{
     justify-content: center;
     align-items: center;
     float: left;
-    margin-right: 1rem;
+    margin-right: 20px;
+    height: 200px;
+    overflow: hidden;
 }
 
 /* nav bar*/
