Fri, Apr 14, 2023, 6:16 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -68,14 +68,11 @@ img{
 
 .profile-image-container {
     width: 33.33%;
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-100%);
-    display: flex;
+    transform: translateY(100%);
     justify-content: center;
     align-items: center;
-
+    float: left;
+    margin-right: 1rem;
 }
 
 /* nav bar*/
