--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -23,7 +23,13 @@ h1 {
 .text {
     vertical-align: top;
 }
-
+.content-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
 .cursor{
     display: inline-block;
     background-color: #000;
@@ -49,7 +55,6 @@ main{
     padding: 1rem;
     box-sizing: border-box;
     margin-top: 65px;
-    position: relative;
 }
 section {
     margin-bottom: 10rem;
