Fri, Apr 14, 2023, 6:32 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -79,11 +79,17 @@ img{
     align-items: center;
 }
 .text-container {
+    display: flex;
+    align-items: center;
     text-align: center;
     margin-top: 10rem;
     margin-left: auto;
     margin-right: auto;
 }
+.name-title {
+    margin-left: 1rem;
+}
+
 
 /* nav bar*/
 nav{
