--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -86,6 +86,7 @@ img{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: center;
     text-align: center;
     margin-top: 10rem;
     margin-left: auto;
