--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -81,11 +81,16 @@ img{
 .profile-image-container-left {
     margin-bottom: 1rem;
 }
+.image-title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .text-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     text-align: center;
     margin-top: 10rem;
