Fri, Apr 14, 2023, 7:06 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -73,13 +73,14 @@ img{
 
 .text-container {
     display: flex;
-    align-items: flex-start;
     margin-top: 10rem;
     margin-left: auto;
     margin-right: auto;
 }
 .name-title {
     margin-left: 1rem;
+
+    align-items: center;
 }
 .sections-container {
     margin-left: 1rem;
