Fri, Apr 14, 2023, 7:15 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -9,7 +9,7 @@
 
 body{
     font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: Arial, -apple-system, "Segoe UI", Helvetica, , sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 h1 {
@@ -22,14 +22,7 @@ h1 {
 .text {
     vertical-align: top;
 }
-.content-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1rem;
-    width: 100%;
-}
+
 .cursor{
     display: inline-block;
     background-color: #000;
@@ -60,6 +53,10 @@ section {
     margin-bottom: 10rem;
     margin-top: 10rem;
     text-align: center;
+}
+.image-title-container {
+    position: relative;
+    transform: translateY(21rem); /* adjust the value to your preference */
 }
 
 img{
