--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -54,6 +54,11 @@ section {
     margin-top: 10rem;
     text-align: center;
 }
+.sections-container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+}
 .image-title-container {
     position: relative;
     transform: translateY(21rem); /* adjust the value to your preference */
