--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -54,10 +54,8 @@ section {
     margin-top: 10rem;
     text-align: center;
 }
-.sections-container {
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
+.about-me-container {
+    margin-left: 30rem; /* adjust the value to your preference */
 }
 .image-title-container {
     position: relative;
