Fri, Apr 14, 2023, 7:40 PM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -52,7 +52,8 @@ section {
 
 .image-title-container {
     position: relative;
-    transform: translateY(21rem); /* adjust the value to your preference */
+    margin-left: 1.5rem;
+    transform: translateY(26rem); /* adjust the value to your preference */
 }
 
 img{
@@ -73,7 +74,9 @@ img{
     justify-content: center;
 }
 
-
+#abtmehdr{
+    margin-bottom: 2.5rem;
+}
 
 /* nav bar*/
 nav{
