Tue, May 16, 2023, 8:35 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -77,7 +77,15 @@ img{
 #abtmehdr{
     margin-bottom: 2.5rem;
     margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
 }
+.sections-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
 /* nav bar*/
 nav{
