--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -76,10 +76,7 @@ img{
 
 #abtmehdr{
     margin-bottom: 2.5rem;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-
+    margin-left: -10rem;
 }
 .sections-container {
     display: flex;
