Tue, May 16, 2023, 8:40 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -55,6 +55,9 @@ section {
     margin-left: 1.5rem;
     transform: translateY(26rem);
 }
+.name.title{
+    margin-left: 5rem;
+}
 
 img{
     width: 150px;
