--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -86,8 +86,13 @@ img{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    
+
   }
+
+.bodies{
+    margin-left: -2rem;
+}
+
 
 /* nav bar*/
 nav{
