Tue, May 16, 2023, 9:28 AM -04:00

--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -87,7 +87,11 @@ img{
     align-items: center;
     text-align: center;
 
-  }
+}
+
+.mb-3{
+input-btn-padding-y: -100rem;
+}
 
 .bodies{
     margin-left: -2rem;
