--- a/cs50/homepage/styles.css
+++ b/cs50/homepage/styles.css
@@ -94,8 +94,9 @@ img{
 }
 
 button{
-    justify-content: center;
-    margin-right: 100px
+    left: 50%;
+    transform: translateX(50%);
+    bottom: 20px;
 }
 
 .bodies{
