--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -15,6 +15,10 @@
 
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
+                    <form method="post">
+                        <input name="input" type="text">
+                        <button type="submit">Submit</button>
+                    </form>
             </div>
 
             <div class="section">
