--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -16,7 +16,7 @@
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
                     <form method="post">
-                        <input name="input" type="text">
+                        <input name="input" type="text" placeholder="MM/DD/YYYY">
                         <button type="submit">Submit</button>
                     </form>
             </div>
