--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -17,7 +17,7 @@
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
                     <form method="post">
                         <h3>Name</h3>
-                        <input name="input" type="text" placeholder="Alex">
+                        <input name="name" type="text" placeholder="Alex">
                         <h3>Birthday</h3>
                         <input name="input" type="text" placeholder="MM/DD/YYYY">
                         <button type="submit">Submit</button>
