Thu, Jun 8, 2023, 10:45 AM -04:00

--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -19,7 +19,7 @@
                         <h3>Name</h3>
                         <input name="name" type="text" placeholder="Alex">
                         <h3>Birthday</h3>
-                        <input name="input" type="text" placeholder="MM/DD/YYYY">
+                        <input name="birthday" type="text" placeholder="MM/DD/YYYY">
                         <p></p>
                         <button type="submit">Submit</button>
                     </form>
