Thu, Jun 8, 2023, 10:55 AM -04:00

--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -18,8 +18,10 @@
                     <form method="post">
                         <h3>Name</h3>
                         <input name="name" type="text" placeholder="Alex">
-                        <h3>Birthday</h3>
-                        <input name="birthday" type="text" placeholder="MM/DD/YYYY">
+                        <h3>Month</h3>
+                        <input name="month" type="text" placeholder="MM">
+                        <h3>Day</h3>
+                        <input name="day" type="text" placeholder="DD">
                         <p></p>
                         <button type="submit">Submit</button>
                     </form>
