Thu, Jun 8, 2023, 10:59 AM -04:00

--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -38,6 +38,8 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {% for birthday in birthdays%}
+                            <input name=" "
                         <!-- TODO: Loop through the database entries to display them in this table -->
                     </tbody>
                 </table>
