Thu, Jun 8, 2023, 11:02 AM -04:00

--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -40,7 +40,9 @@
                     <tbody>
                         {% for birthday in birthdays%}
                             <tr>
-                                <td>{{ b</td>
+                                <td>{{ birthdays.name }}</td>
+                                <td>{{ birthdays.month }}</td>
+                                <td>{{ birthdays.day }}</td>
                             </tr>
                         <!-- TODO: Loop through the database entries to display them in this table -->
                     </tbody>
