--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -41,9 +41,9 @@
                         {% for birthday in birthdays%}
                             <tr>
                                 <td>{{ birthdays.name }}</td>
-                                <td>{{ birthdays.month }}</td>
-                                <td>{{ birthdays.day }}</td>
+                                <td>{{ birthdays.month }}/{{ birthdays.day }}</td>
                             </tr>
+                        {% endfor %}
                         <!-- TODO: Loop through the database entries to display them in this table -->
                     </tbody>
                 </table>
