--- a/cs50/birthdays/templates/index.html
+++ b/cs50/birthdays/templates/index.html
@@ -40,8 +40,8 @@
                     <tbody>
                         {% for birthday in birthdays%}
                             <tr>
-                                <td>{{ birthdays.name }}</td>
-                                <td>{{ birthdays.month }}/{{ birthdays.day }}</td>
+                                <td>{{ birthday.name }}</td>
+                                <td>{{ birthday.month }}/{{ birthday.day }}</td>
                             </tr>
                         {% endfor %}
                         <!-- TODO: Loop through the database entries to display them in this table -->
