--- a/cs50/finance/templates/register.html
+++ b/cs50/finance/templates/register.html
@@ -6,6 +6,8 @@
 
 {% block main %}
     <form action="/register" method="post">
+        <h3>Create Your Login Details</h3>
+        <p></p>
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Create Username" type="text">
         </div>
