Fri, Jun 16, 2023, 9:47 AM -04:00

--- a/cs50/finance/templates/registered.html
+++ b/cs50/finance/templates/registered.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Register
+    Registered
 {% endblock %}
 
 {% block main %}
-    <h1>You have been successfully registerd!</h1>
+    <h1>You have been successfully registerd</h1>
 {% endblock %}
