--- a/cs50/finance/templates/registered.html
+++ b/cs50/finance/templates/registered.html
@@ -6,4 +6,6 @@
 
 {% block main %}
     <h1>You have been successfully registerd</h1>
+</div>
+<button class="btn btn-primary" type="submit">Log in</button>
 {% endblock %}
