--- a/cs50/finance/templates/registered.html
+++ b/cs50/finance/templates/registered.html
@@ -7,5 +7,7 @@
 {% block main %}
     <h1>You have been successfully registerd</h1>
 </div>
-<button class="btn btn-primary" type="submit">Log in</button>
+<form action="/login" method="get">
+    <button class="btn btn-primary" type="submit">Log in</button>
+</form>
 {% endblock %}
