--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -5,5 +5,8 @@
 {% endblock %}
 
 {% block main %}
-
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control-sm" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
 {% endblock %}
