Sat, Jun 17, 2023, 10:10 AM -04:00

--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control-sm" id="exampleFormControlInput1" placeholder="name@example.com">
+        <label for="exampleFormControlInput1" class="form-label">Stock Symbol</label>
+        <input type="text" class="form-control-sm" id="exampleFormControlInput1" placeholder="name@example.com">
     </div>
 {% endblock %}
