Sat, Jun 17, 2023, 10:19 AM -04:00

--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -9,7 +9,14 @@
     <p></p>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Stock Symbol</label>
-        <input name=symbol type="text" class="form-control-sm" id="exampleFormControlInput1" placeholder="NTFLX">
+        <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
+        <datalist id="datalistOptions">
+            <option value="San Francisco">
+            <option value="New York">
+            <option value="Seattle">
+            <option value="Los Angeles">
+            <option value="Chicago">
+        </datalist>
         <button class="btn btn-primary" type="submit">Search</button>
     </div>
 {% endblock %}
