--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -9,10 +9,10 @@
     <p></p>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Stock Symbol</label>
-        <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
+        <input name=symbol class="form-control" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
         <datalist id="datalistOptions">
-            <option value="San Francisco">
-            <option value="New York">
+            <option value="TSLA">
+            <option value="NTFLX">
             <option value="Seattle">
             <option value="Los Angeles">
             <option value="Chicago">
