Sat, Jun 17, 2023, 10:24 AM -04:00

--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -9,13 +9,19 @@
     <p></p>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Stock Symbol</label>
-        <input name=symbol class="form-control" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
+        <input name=symbol class="form-control-sm" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
         <datalist id="datalistOptions">
+            <option value="NFLX">
+            <option value="AAPL">
+            <option value="AMZN">
+            <option value="MSFT">
+            <option value="GOOGL">
+            <option value="FB">
             <option value="TSLA">
-            <option value="NTFLX">
-            <option value="Seattle">
-            <option value="Los Angeles">
-            <option value="Chicago">
+            <option value="JPM">
+            <option value="JNJ">
+            <option value="NVDA">
+            <option value="V">
         </datalist>
         <button class="btn btn-primary" type="submit">Search</button>
     </div>
