Sat, Jun 17, 2023, 10:27 AM -04:00

--- a/cs50/finance/templates/quoted.html
+++ b/cs50/finance/templates/quoted.html
@@ -1,9 +1,9 @@
-{% extends "layout.html" %}
+{% extends "quote.html" %}
 
 {% block title %}
     Quoted
 {% endblock %}
 
 {% block main %}
-
+    
 {% endblock %}
