Sat, Jun 17, 2023, 10:38 AM -04:00

--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -9,7 +9,7 @@
     <p></p>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Stock Symbol</label>
-        <input name=symbol class="form-control-sm" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
+        <input method="post" name=symbol class="form-control-sm" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
         <datalist id="datalistOptions">
             <option value="NFLX">
             <option value="AAPL">
