--- a/cs50/finance/templates/quoted.html
+++ b/cs50/finance/templates/quoted.html
@@ -5,5 +5,8 @@
 {% endblock %}
 
 {% block main %}
-    <h2>{{ stock }}</h2>
+    <div>
+        <h2>{{ stock.name }}</h2>
+        <p>Price: {{ stock.price }}</p>
+    </div>
 {% endblock %}
