Sat, Jun 17, 2023, 11:03 AM -04:00

--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -17,7 +17,7 @@
                 <option value="AMZN">
                 <option value="MSFT">
                 <option value="GOOGL">
-                <option value="FB">
+                <option value="META">
                 <option value="TSLA">
                 <option value="JPM">
                 <option value="JNJ">
