Thu, Jun 22, 2023, 9:30 AM -04:00

--- a/cs50/finance/templates/buy.html
+++ b/cs50/finance/templates/buy.html
@@ -8,7 +8,7 @@
     <h1>Buy Stock</h1>
     <p></p>
     <div class="mb-3">
-        <form action="/quote" method="post">
+        <form action="/buy" method="post">
             <label for="exampleFormControlInput1" class="form-label">Stock Symbol</label>
             <input name=symbol class="form-control-sm" list="datalistOptions" id="exampleDataList" placeholder="TSLA">
             <datalist id="datalistOptions">
