Thu, Jun 22, 2023, 9:39 AM -04:00

--- a/cs50/finance/templates/buy.html
+++ b/cs50/finance/templates/buy.html
@@ -24,7 +24,9 @@
                 <option value="NVDA">
                 <option value="V">
             </datalist>
-            
+            <div>
+                
+            </div>
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
 
