--- a/cs50/finance/templates/buy.html
+++ b/cs50/finance/templates/buy.html
@@ -25,7 +25,8 @@
                 <option value="V">
             </datalist>
             <div>
-                
+                <label for="exampleFormControlInput1" class="form-label">Shares</label>
+                <input type="text" class="form-control-sm" id="exampleFormControlInput1" placeholder="1">
             </div>
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
