Thu, Jun 22, 2023, 9:49 AM -04:00

--- a/cs50/finance/templates/buy.html
+++ b/cs50/finance/templates/buy.html
@@ -26,7 +26,7 @@
             </datalist>
             <div>
                 <label for="exampleFormControlInput1" class="form-label">Shares</label>
-                <input type="number" class="form-control-sm" id="exampleFormControlInput1" name="shares" placeholder="1">
+                <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" name="shares" placeholder="1">
             </div>
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
