Fri, Jun 23, 2023, 7:29 PM -04:00

--- a/cs50/finance/templates/index.html
+++ b/cs50/finance/templates/index.html
@@ -5,5 +5,13 @@
 {% endblock %}
 
 {% block main %}
-    <h1></h1>
+    <table>
+        <tr>
+            <td>Symbol</td>
+            <td>Name</td>
+            <td>Shares</td>
+            <td>Price</td>
+            <td>Total</td>
+        </tr>
+    </table>
 {% endblock %}
