--- a/cs50/finance/templates/index.html
+++ b/cs50/finance/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <table>
+    <table border="1">
         <tr>
             <td>Symbol</td>
             <td>Name</td>
